--- a/rabbitmq/1.46.4.20200909/Chart.yaml
+++ b/rabbitmq/1.46.4.20200909/Chart.yaml
@@ -1,7 +1,7 @@
 name: rabbitmq
 apiVersion: v1
 appVersion: 3.8.5
-version: 1.46.4
+version: 1.46.4.20200909
 description: Highly available RabbitMQ cluster, the open source message broker
   software that implements the Advanced Message Queuing Protocol (AMQP).
 keywords:
