--- a/redis/v9.0.2.0618/values.yaml
+++ b/redis/v9.0.2.0618/values.yaml
@@ -2,8 +2,8 @@
 ## Please, note that this will override the image parameters, including dependencies, configured to use the global value
 ## Current available global Docker image parameters: imageRegistry and imagePullSecrets
 ##
-# global:
-#   imageRegistry: myRegistryName
+global:
+  imageRegistry:
 #   imagePullSecrets:
 #     - myRegistryKeySecretName
 
@@ -12,11 +12,11 @@
 ##
 image:
   registry: docker.io
-  repository: ranchercharts/bitnami-redis
+  repository: bitnami/redis
   ## Bitnami Redis image tag
   ## ref: https://github.com/bitnami/bitnami-docker-redis#supported-tags-and-respective-dockerfile-links
   ##
-  tag: 5.0.5-debian-9-r95
+  tag: latest
   ## Specify a imagePullPolicy
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
   ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
@@ -51,11 +51,11 @@ sentinel:
   ##
   image:
     registry: docker.io
-    repository: ranchercharts/bitnami-redis-sentinel
+    repository: bitnami/redis-sentinel
     ## Bitnami Redis image tag
     ## ref: https://github.com/bitnami/bitnami-docker-redis-sentinel#supported-tags-and-respective-dockerfile-links
     ##
-    tag: 5.0.5-debian-9-r37
+    tag: latest
     ## Specify a imagePullPolicy
     ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
     ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
@@ -447,8 +447,8 @@ metrics:
 
   image:
     registry: docker.io
-    repository: ranchercharts/bitnami-redis-exporter
-    tag: 1.0.4-debian-9-r4
+    repository: bitnami/redis-exporter
+    tag: latest
     pullPolicy: IfNotPresent
     ## Optionally specify an array of imagePullSecrets.
     ## Secrets must be manually created in the namespace.
