--- a/mongodb/v5.0.0.0618/values.yaml
+++ b/mongodb/v5.0.0.0618/values.yaml
@@ -1,17 +1,17 @@
 ## Global Docker image registry
 ## Please, note that this will override the image registry for all the images, including dependencies, configured to use the global value
 ##
-# global:
-#   imageRegistry:
+global:
+  imageRegistry:
 
 image:
   ## Bitnami MongoDB image name
   ##
-  repository: bitnami/mongodb
+  repository: bitnami-mongodb-f
   ## Bitnami MongoDB image tag
   ## ref: https://hub.docker.com/r/bitnami/mongodb/tags/
   ##
-  tag: 4.0.3
+  tag: v20200217
 
   ## Specify a imagePullPolicy
   ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
@@ -84,7 +84,7 @@ service:
 #
 replicaSet:
   ## Whether to create a MongoDB replica set for high availability or not
-  enabled: true
+  enabled: false
   useHostnames: true
 
   ## Name of the replica set
@@ -98,15 +98,15 @@ replicaSet:
   ## Number of replicas per each node type
   ##
   replicas:
-    secondary: 1
-    arbiter: 1
+    secondary: 2
+    arbiter: 0
   ## Pod Disruption Budget
   ## ref: https://kubernetes.io/docs/concepts/workloads/pods/disruptions/
   pdb:
     minAvailable:
       primary: 1
-      secondary: 1
-      arbiter: 1
+      secondary: 2
+      arbiter: 0
 
 # Annotations to be added to MongoDB pods
 podAnnotations: {}
@@ -216,11 +216,11 @@ configmap:
 ## Prometheus Exporter / Metrics
 ##
 metrics:
-  enabled: true
+  enabled: false
 
   image:
-    repository: forekshub/percona-mongodb-exporter
-    tag: latest
+    repository: bitnami-mongodb-exporter
+    tag: v20200630
     pullPolicy: IfNotPresent
     ## Optionally specify an array of imagePullSecrets.
     ## Secrets must be manually created in the namespace.
