--- a/mysql/v1.3.1.0706/templates/tests/test.yaml
+++ b/mysql/v1.3.1.0706/templates/tests/test.yaml
@@ -13,7 +13,7 @@ metadata:
 spec:
   initContainers:
     - name: test-framework
-      image: "{{ .Values.testFramework.image}}:{{ .Values.testFramework.tag }}"
+      image: {{ include "mysql.testframework.image" . }}
       command:
       - "bash"
       - "-c"
@@ -26,7 +26,7 @@ spec:
         name: tools
   containers:
     - name: {{ .Release.Name }}-test
-      image: "{{ .Values.image }}:{{ .Values.imageTag }}"
+      image: {{ include "mysql.image" . }}
       command: ["/tools/bats/bats", "-t", "/tests/run.sh"]
       volumeMounts:
       - mountPath: /tests
