--- a/mysql/v1.3.1.0706/values.yaml
+++ b/mysql/v1.3.1.0706/values.yaml
@@ -1,12 +1,15 @@
 ## mysql image version
 ## ref: https://hub.docker.com/r/library/mysql/tags/
 ##
-image: "ranchercharts/mysql"
-imageTag: "5.7.14"
+global:
+  imageRegistry:
+
+image: "mysql"
+imageTag: "5.7.29"
 
 busybox:
-  image: "ranchercharts/busybox"
-  tag: "1.29.3"
+  image: "busybox"
+  tag: "latest"
 
 testFramework:
   image: "ranchercharts/dduportal-bats"
@@ -143,7 +146,7 @@ initializationFiles: {}
 
 metrics:
   enabled: false
-  image: ranchercharts/prom-mysqld-exporter
+  image: prom/mysqld-exporter
   imageTag: v0.10.0
   imagePullPolicy: IfNotPresent
   resources: {}
