--- a/cassandra/5.6.1/values.yaml
+++ b/cassandra/5.6.1/values.yaml
@@ -3,7 +3,7 @@
 ## Current available global Docker image parameters: imageRegistry and imagePullSecrets
 ##
 global:
-  imageRegistry:
+  imageRegistry: 10.57.241.229:5000
 #   imagePullSecrets:
 #     - myRegistryKeySecretName
 #   storageClass: myStorageClass
