--- a/mysql/v1.3.1.0706/values.yaml
+++ b/mysql/v1.3.1.0706/values.yaml
@@ -2,7 +2,7 @@
 ## ref: https://hub.docker.com/r/library/mysql/tags/
 ##
 global:
-  imageRegistry:
+  imageRegistry: 10.57.241.229:5000
 
 image: "mysql"
 imageTag: "5.7.29"
