--- a/kafka/11.2.2.20200824/values.yaml
+++ b/kafka/11.2.2.20200824/values.yaml
@@ -4,7 +4,7 @@
 ##
 global:
   imageRegistryEnable: false
-  imageRegistry: 10.57.241.229:5000
+  imageRegistry: "10.57.241.229:5000"
   # imagePullSecrets:
   #   - myRegistryKeySecretName
   # storageClass: myStorageClass
