--- a/rabbitmq/1.46.4.20200909/values.yaml
+++ b/rabbitmq/1.46.4.20200909/values.yaml
@@ -1,6 +1,6 @@
 global:
   imageRegistryEnable: false
-  imageRegistry: 10.57.241.229:5000
+  imageRegistry: "10.57.241.229:5000"
 ## RabbitMQ application credentials
 ## Ref: http://rabbitmq.com/access-control.html
 ##
