--- a/cassandra/5.6.1/Chart.yaml
+++ b/cassandra/5.6.1/Chart.yaml
@@ -7,7 +7,7 @@ keywords:
   - cassandra
   - database
   - nosql
-icon: file://../logo-cassandra.png
+icon: file://logo-cassandra.png
 sources:
   - https://github.com/bitnami/bitnami-docker-cassandra
 home: http://cassandra.apache.org
