--- a/timescaledb-single/0.5.3.1030/values.yaml
+++ b/timescaledb-single/0.5.3.1030/values.yaml
@@ -1,7 +1,7 @@
 # This file and its contents are licensed under the Apache License 2.0.
 # Please see the included NOTICE for copyright information and LICENSE for a copy of the license.
 global:
-  imageRegistry: "chart.dct-tb.mtjade.cloud/poseidon-managed"
+  imageRegistry: "10.20.208.139/poseidon-managed"
 
 replicaCount: 3
 
